--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,22 +18,5 @@
   },
   "linkToUsage": true,
   "skipCi": true,
-  "contributors": [
-    {
-      "login": "rdeago",
-      "name": "Riccardo De Agostini",
-      "avatar_url": "https://avatars.githubusercontent.com/u/139223?v=4",
-      "profile": "https://github.com/rdeago",
-      "contributions": [
-        "code",
-        "design",
-        "doc",
-        "ideas",
-        "maintenance",
-        "projectManagement",
-        "question",
-        "review"
-      ]
-    }
-  ]
+  "contributors": []
 }
