Enforce extended analyzer rules in PolyKit.Generator

--- a/src/PolyKit.Generator/PolyKit.Generator.csproj
+++ b/src/PolyKit.Generator/PolyKit.Generator.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsRoslynComponent>true</IsRoslynComponent>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsPackable>false</IsPackable>
     <RootNamespace />
     <CLSCompliant>false</CLSCompliant>
