--- a/src/PolyKit.Polyfills/PolyKit.Polyfills.csproj
+++ b/src/PolyKit.Polyfills/PolyKit.Polyfills.csproj
@@ -10,8 +10,8 @@
     Both .NET Framework 4.6.2 and 4.7 are present because v4.7 does not require a dependency on System.ValueTuple.
   -->
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net47;net6.0;net7.0</TargetFrameworks>
-    <LangVersion>11</LangVersion>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net47;net6.0;net7.0;net8.0</TargetFrameworks>
+    <LangVersion>12</LangVersion>
     <RootNamespace />
     <IsPackable>false</IsPackable>
   </PropertyGroup>
