--- a/src/PolyKit/PolyKit.csproj
+++ b/src/PolyKit/PolyKit.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>Provides a set of polyfills that can be shared among projects.</Description>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net47;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net462;net47;net6.0;net7.0;net8.0</TargetFrameworks>
     <RootNamespace />
   </PropertyGroup>
 
