--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,39 +1,53 @@
 'area:code':
-  - '*.sln'
-  - 'src/**/*'
+ - changed-files:
+    - any-glob-to-any-file:
+      - '*.sln'
+      - 'src/**/*'
 
 'area:style':
-  - '**/.editorconfig'
-  - '**/.globalconfig'
-  - '**/stylecop.json'
-  - '**/*.DotSettings'
+ - changed-files:
+    - any-glob-to-any-file:
+      - '**/.editorconfig'
+      - '**/.globalconfig'
+      - '**/stylecop.json'
+      - '**/*.DotSettings'
 
 'area:build':
-  - '**/*.cake'
-  - 'build/**/*'
+ - changed-files:
+    - any-glob-to-any-file:
+      - '**/*.cake'
+      - 'build/**/*'
 
 'area:repo':
-  - '.github/*.yml'
-  - '.github/**/*.md'
-  - CODEOWNERS
-  - '.github/CODEOWNERS'
+ - changed-files:
+    - any-glob-to-any-file:
+      - '.github/*.yml'
+      - '.github/**/*.md'
+      - CODEOWNERS
+      - '.github/CODEOWNERS'
 
 'area:ci':
-  - '.github/workflows/**/*'
-  - 'lgtm.yml'
+ - changed-files:
+    - any-glob-to-any-file:
+      - '.github/workflows/**/*'
+      - 'lgtm.yml'
 
 'area:deps':
-  - '**/Directory.Packages.props'
-  - Directory.Build.props
-  - Directory.Build.targets
-  - global.json
-  - .config/dotnet-tools.json
+ - changed-files:
+    - any-glob-to-any-file:
+      - '**/Directory.Packages.props'
+      - Directory.Build.props
+      - Directory.Build.targets
+      - global.json
+      - .config/dotnet-tools.json
 
 'area:docs':
-  - 'docs/**/*'
-  - '.all-contributorsrc'
-  - '**/CHANGELOG.md'
-  - '**/LICENSE'
-  - '**/NuGet-README.md'
-  - '**/README.md'
-  - '**/THIRD-PARTY-NOTICES'
+ - changed-files:
+    - any-glob-to-any-file:
+      - 'docs/**/*'
+      - '.all-contributorsrc'
+      - '**/CHANGELOG.md'
+      - '**/LICENSE'
+      - '**/NuGet-README.md'
+      - '**/README.md'
+      - '**/THIRD-PARTY-NOTICES'
