--- a/.github/workflows/build-test-pack.yml
+++ b/.github/workflows/build-test-pack.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
-        working-directory: ./TestResults/
+        working-directory: TestResults
         files: Cobertura.xml
         verbose: true
