--- a/src/PolyKit.Polyfills/PolyKit.Polyfills.csproj
+++ b/src/PolyKit.Polyfills/PolyKit.Polyfills.csproj
@@ -29,6 +29,7 @@
 
   <!-- Reference all necessary packages to enable all polyfill features -->
   <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.HashCode" />
     <PackageReference Include="System.Memory" />
     <PackageReference Include="System.ValueTuple" />
   </ItemGroup>
